# calibrate-offsets

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  calibrateAndRun.sh  exportOffsetToDemoRedBall.sh
modules/: CMakeLists.txt
modules/calibOffsets/: calibOffsets.thrift  main.cpp
modules/calibOffsets/app/conf/: config.ini
src/: main.cpp
